--- a/themes/volantis/source/css/_plugins/valine.styl
+++ b/themes/volantis/source/css/_plugins/valine.styl
@@ -57,6 +57,8 @@ article#comments
           fill: var(--color-p)
           &.actived
             fill: $color-theme
+        .veditor
+          background: url(https://cdn.jsdelivr.net/gh/celestezj/ImageHosting/img/20210311212242.gif) 100% 100% no-repeat
     .vcount
       color: var(--color-p)
       font-size: $fontsize-meta
