--- a/themes/volantis/layout/_widget/blogger.ejs
+++ b/themes/volantis/layout/_widget/blogger.ejs
@@ -3,7 +3,7 @@
   <div class='content'>
     <% if (item.avatar) { %>
       <% if (item.url) { %>
-        <a class='avatar flat-box <%- item.shape %>' href='<%- url_for(item.url) %>'>
+        <a class='avatar flat-box <%- item.shape %>' href='<%- url_for(item.url) %>' target="_blank">
           <img no-lazy src='<%- item.avatar %>'/>
         </a>
       <% } else { %>
@@ -46,3 +46,4 @@
     <% } %>
   </div>
 </section>
+<script>if(typeof jQuery == 'undefined'){}else{$('.fa-weixin').html('<img no-lazy class="qrcode" src="https://cdn.jsdelivr.net/gh/celestezj/ImageHosting/img/20210209044239.jpg" alt="微信二维码"/>');}</script>
