--- a/themes/volantis/layout/layout.ejs
+++ b/themes/volantis/layout/layout.ejs
@@ -26,4 +26,6 @@
     <% } %>
   </div>
 </body>
+<%- partial('_partial/left', null, {cache: !config.relative_link}) %>
+<script type="text/javascript" src="/js/funny-title.js"></script>
 </html>
