--- a/themes/volantis/layout/tag.ejs
+++ b/themes/volantis/layout/tag.ejs
@@ -6,10 +6,17 @@
       <div class='post-wrapper'>
         <article id="tag" class="post article white-box reveal <%- theme.custom_css.body.effect.join(' ') %>">
           <h2><%- page.title %></h2>
-          <div class="all-tags">
-            <% let tc = theme.sidebar.widget_library.tagcloud; %>
-            <%- list_tags({}) %>
-          </div>
+          <% if (theme.use_new_tag_cloud) { %>
+		    <%- partial('_widget/new-tag-cloud') %>
+		  <% } else { %>
+		    <div class="all-tags">
+              <% let tc = theme.sidebar.widget_library.tagcloud; %>
+              <%- list_tags({}) %>
+            </div>
+		  <% } %>
+		  <% if (site.tags.length>1) { %>
+		    <%- partial('_widget/tag-pie') %>
+		  <% } %>
           <br>
           <%- page.content %>
         </article>
