--- a/themes/volantis/source/css/_layout/main.styl
+++ b/themes/volantis/source/css/_layout/main.styl
@@ -42,6 +42,21 @@
         &.hl
           box-shadow: $boxshadow-card-float
 
+#RightDownBtn
+  trans(0.3s)
+  &:hover
+    transform: scale(1.9)
+    //transform: rotate(360deg) //本想同时施加多个动画，放大+旋转，未果
+    transition: all .3s
+
+.menu, .navigation
+  a
+    &:hover
+      .dyiconnavbar
+        trans(0.3s)
+        transform: rotate(360deg)
+        transition: all .3s
+
 .l_main
   width: "calc(100% - 1 * %s)" % $sidebar
   @media screen and (max-width: $device-tablet)
@@ -103,6 +118,10 @@
     margin-bottom: $gap
     padding: 1.5 * $gap
     border-radius: $border-card
+    
+    transition: box-shadow .5s ease
+    &:hover
+      box-shadow:0px 1px 20px -1.5px rgba(0,0,0,0.5)
     h1.title
       font-size: $fontsize-h1
       margin: 0
