--- a/themes/volantis/source/css/_layout/sidebar.styl
+++ b/themes/volantis/source/css/_layout/sidebar.styl
@@ -30,6 +30,10 @@
   border-radius: $border-card
   width: 100%
   display: none
+  
+  transition: box-shadow .5s ease
+  &:hover
+    box-shadow:0px 1px 20px -1.5px rgba(0,0,0,0.5)
   ul,ol
     li
       margin-top: 0
