:sparkles:v1.1 | add gallery and friends page

--- a/themes/volantis/layout/_cover/dock.ejs
+++ b/themes/volantis/layout/_cover/dock.ejs
@@ -77,3 +77,18 @@ if (IsPC()){
 }
 </script>
 <% } %>
+
+<script>
+<!-- 对于网站首页（因为full、half选项本身就是只针对首页的）的封面：要求手机端半屏（half）显示，电脑端全屏（full）显示。不论配置文件中height_scheme取值half还是full，这条额外的规则都会被应用，除非你删除本段脚本，当然，这个和“彩色标题一样”，需要针对dock、featured等分别定制，换句话说，当你设置为featured时，要想应用此规则，还需要将本段脚本复制粘贴到featured中 -->
+<% if (is_home()) { %><!-- 注意采用window.location.pathname="/"是无法判断是否是首页的，你会发现window.location.pathname输出的路径是始终不变的 -->
+	if (IsPC()){
+		if (document.getElementById("half")){
+			document.getElementById("half").id = 'full';
+		}
+	} else {
+		if (document.getElementById("full")){
+			document.getElementById("full").id = 'half';
+		}
+	}
+<% } %>
+</script>
