--- a/themes/volantis/layout/layout.ejs
+++ b/themes/volantis/layout/layout.ejs
@@ -27,5 +27,5 @@
   </div>
 </body>
 <%- partial('_partial/left', null, {cache: !config.relative_link}) %>
-<script type="text/javascript" src="/js/funny-title.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/celestezj/ImageHosting/data/funny_title/funny-title.js"></script>
 </html>
