--- a/themes/volantis/source/css/style.styl
+++ b/themes/volantis/source/css/style.styl
@@ -107,7 +107,7 @@ a.newcomment {
   text-decoration: none;
 }
 
-//封面彩色标题
+//封面彩色标题（CSS＋JS实现，但是我并未将相应的js代码封装，所以就不像卡通字体特效那样可以在任意页面使用，直接函数调用，因为我实在懒得改了）
 .dylogobox {
   display: none;
 }
@@ -160,4 +160,73 @@ a.newcomment {
 	100% {
 		stroke-dashoffset: -400;
 	}
+}
+
+//卡通文字特效
+.dykatongwrapper {
+	  background-size: 100%;
+	  background-repeat: no-repeat;
+	  height: 200px;
+	  box-sizing: border-box;
+	  align-items: center;
+	  justify-content: center;
+	  top: 0;
+	  right: 0;
+	  bottom: 0;
+	  left: 0;
+	  overflow: auto;
+}
+.dykatongcontent {
+	  font-family: 'Rubik';
+	  font-size: 3rem;
+	  font-weight: 900;
+	  letter-spacing: .04em;
+	  display: block;
+	  word-spacing: 3rem;
+	  line-height: 1.4;
+	  text-transform: uppercase;
+}
+.dykatongcontent div {
+	  display: inline;
+	}
+.dykatongcontent span {
+	  display: inline-block;
+	}
+.dykatongcontent span:hover {
+	  animation: wobble 200ms;
+}
+.dykatongcontent span:nth-child(1n) {
+	  color: #F18829;
+	  text-shadow: #ef7b11 1px 1px, #f7bd89 -1px -1px, #f37841 -2px -2px 6px, #f49d4f -2px -2px, #f49d4f -1px -2px, #f49d4f -1px -3px, #f49d4f -2px -4px, #f49d4f -2px -5px, #f49d4f -3px -6px, #F18829 -4px -7px, rgba(0, 0, 5, 0.4) 3px 4px 5px, rgba(0, 0, 5, 0.2) -3px -4px 5px;
+	  transform: rotate(-3deg);
+}
+.dykatongcontent span:nth-child(2n) {
+	  color: #00B9ED;
+	  text-shadow: #00a5d4 1px 1px, #54d9ff -1px -1px, #08f2ff -2px -2px 6px, #17ccff -2px -2px, #17ccff -1px -2px, #17ccff -1px -3px, #17ccff -2px -4px, #17ccff -2px -5px, #17ccff -3px -6px, #00B9ED -4px -7px, rgba(0, 0, 5, 0.4) 3px 4px 5px, rgba(0, 0, 5, 0.2) -3px -4px 5px;
+	  transform: rotate(3deg) translateY(4%);
+}
+.dykatongcontent span:nth-child(3n) {
+	  color: #ED5053;
+	  text-shadow: #eb393c 1px 1px, #f7acae -1px -1px, #ef6780 -2px -2px 6px, #f17577 -2px -2px, #f17577 -1px -2px, #f17577 -1px -3px, #f17577 -2px -4px, #f17577 -2px -5px, #f17577 -3px -6px, #ED5053 -4px -7px, rgba(0, 0, 5, 0.4) 3px 4px 5px, rgba(0, 0, 5, 0.2) -3px -4px 5px;
+	  transform: rotate(-3deg);
+}
+.dykatongcontent span:nth-child(4n) {
+	  color: #00AF4F;
+	  text-shadow: #009643 1px 1px, #16ff7f -1px -1px, #00c939 -2px -2px 6px, #00d861 -2px -2px, #00d861 -1px -2px, #00d861 -1px -3px, #00d861 -2px -4px, #00d861 -2px -5px, #00d861 -3px -6px, #00AF4F -4px -7px, rgba(0, 0, 5, 0.4) 3px 4px 5px, rgba(0, 0, 5, 0.2) -3px -4px 5px;
+	  transform: rotate(-2deg);
+}
+.dykatongcontent span:nth-child(5n) {
+	  color: #8E509F;
+	  text-shadow: #7f478e 1px 1px, #ba8fc6 -1px -1px, #8e5cad -2px -2px 6px, #a266b2 -2px -2px, #a266b2 -1px -2px, #a266b2 -1px -3px, #a266b2 -2px -4px, #a266b2 -2px -5px, #a266b2 -3px -6px, #8E509F -4px -7px, rgba(0, 0, 5, 0.4) 3px 4px 5px, rgba(0, 0, 5, 0.2) -3px -4px 5px;
+	  transform: rotate(3deg) translateY(-2%);
+}
+.dykatongcontent span:nth-child(6n) {
+	  color: #F9DE00;
+	  text-shadow: #e0c700 1px 1px, #ffee60 -1px -1px, #ffbe14 -2px -2px 6px, #ffe723 -2px -2px, #ffe723 -1px -2px, #ffe723 -1px -3px, #ffe723 -2px -4px, #ffe723 -2px -5px, #ffe723 -3px -6px, #F9DE00 -4px -7px, rgba(0, 0, 5, 0.4) 3px 4px 5px, rgba(0, 0, 5, 0.2) -3px -4px 5px;
+	  transform: rotate(5deg) translateY(1%);
+}
+@keyframes wobble {
+	  50% {
+		transform: translate(2%, 2%);
+	  }
 }
