--- a/themes/volantis/source/css/_custom/highlight.styl
+++ b/themes/volantis/source/css/_custom/highlight.styl
@@ -158,7 +158,7 @@
       color: rgba(158, 142, 142, 0.9)
   .highlight pre .comment
     color: #ffffffbd
-  .cover-wrapper#half
+  .cover-wrapper
     box-shadow:0px 10px 13px #182026
     -webkit-box-shadow:0px 10px 13px #182026
     -moz-box-shadow:0px 10px 13px #182026
